[package]
name = "tower-cgi"
version = "0.0.1"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
license = "MIT"
description = "Tower services for CGI applications"
repository = "https://github.com/reu/tower-cgi"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["cgi", "tower", "async", "service", "http"]

[dependencies]
bytes = "1.5.0"
futures = "0.3"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
httparse = "1.8"
hyper = { version = "1", features = ["http1", "http2"] }
tokio = { version = "1.35.1", features = ["io-std", "macros", "process", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = { version = "0.4.13", features = ["util"] }

[dev-dependencies]
indoc = "1.0.3"
tempfile = "3.3.0"
tokio = { version = "1.16.1", features = ["io-std", "macros", "process", "rt", "test-util"] }
